<resources>
    <string name="app_name">myMedical</string>
    <string name="cgm_sensors">CGM Sensors</string>
    <string name="freestyle_libre_3">Freestyle Libre 3</string>
    <string name="dexcom_one">Dexcom One</string>
    <string name="quantity">Quantity</string>
    <string name="_10_most_recent_events">10 Most Recent Events</string>
    <string name="back">back</string>
    <string name="create">Create</string>
    <string name="topic_of_the_call">Topic of the call</string>
    <string name="create_a_new_gp_call_log">Create a new GP call log</string>
    <string name="doctor_s_name">Doctor\'s name</string>
    <string name="mymedical">MyMedical</string>
    <string name="statistics">STATISTICS</string>
    <string name="logout">LOGOUT</string>
    <string name="gp_calls">GP CALLS</string>
    <string name="events">EVENTS</string>
    <string name="log_a_new">LOG A NEW</string>
    <string name="perscriptions">PRESCRIPTIONS</string>
    <string name="gcm_sensors">GCM SENSORS</string>
    <string name="start_libre_sensor">START LIBRE SENSOR</string>
    <string name="start_dexcom_sensor">START DEXCOM SENSOR</string>
    <string name="username">Username</string>
    <string name="my_medical">My Medical</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_yet_sign_up_now">Don\'t have an account yet? Sign up now!</string>
    <string name="full_name">Full name</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account_log_in_here">Already have an account? Log in here!</string>
    <string name="_0">0</string>
    <string name="perscriptions_collected">PERSCRIPTIONS COLLECTED</string>
    <string name="cgm_sensors_started">CGM SENSORS STARTED</string>
    <string name="gp_calls_recorded">GP CALLS RECORDED</string>
    <string name="freestyle_libre_logo">freestyle libre logo</string>
    <string name="dexcom_logo">dexcom logo</string>
    <string name="back_button">back button</string>
    <string name="log_a_new_prescription">log a new prescription</string>
</resources>